--- a/app/src/main/res/layout/rv_main_item.xml
+++ b/app/src/main/res/layout/rv_main_item.xml
@@ -25,22 +25,40 @@
 
             <ImageView
                 android:id="@+id/icon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@android:drawable/ic_dialog_email"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_dialog_email" />
 
-            <TextView
-                android:id="@+id/text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="Animation"
-                android:textSize="18sp"
-                android:textColor="#48495F"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-condensed"
-                />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/ava"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_weight="1"
+                    card_view:srcCompat="?android:attr/actionModeCutDrawable" />
+
+                <TextView
+                    android:id="@+id/text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-condensed"
+                    android:gravity="center_horizontal|center"
+                    android:text="Animation"
+                    android:textColor="#48495F"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
