--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,8 +31,8 @@
 
     <ImageView
         android:id="@+id/iv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="347dp" />
