--- a/app/src/main/res/layout/rv_main_item.xml
+++ b/app/src/main/res/layout/rv_main_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="360dp"
+    android:layout_height="wrap_content"
+    android:minHeight="300dp"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -26,7 +27,7 @@
             <ImageView
                 android:id="@+id/icon"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
                 android:layout_weight="1"
                 android:src="@android:drawable/ic_dialog_email" />
